--- a/vendas.html
+++ b/vendas.html
@@ -6,10 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página de Vendas</h1>
+    <h1>Vendas</h1>
     <a href="index.html">Voltar para a página inicial</a>
     <h2>Relatório de Vendas</h2>
     <p>Venda 1</p>
-    <p>Venda 2</p>
 </body>
 </html>
