Atualizações no layout

--- a/blog.html
+++ b/blog.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
 <body>
-    <h1>Vendas</h1>
-    <a href="index.html">Voltar para a página inicial</a>
-    <h2>Relatório de Vendas</h2>
-    <p>Venda 1</p>
+    <h1>Blog</h1>
+    <p>Bem-vindo à página de blog</p>
 </body>
 </html>
